name:                data-has
version:             0.1.0.0
synopsis:            Simple extensible product
description:         Simple extensible product
license:             BSD3
license-file:        LICENSE
author:              winterland1989
maintainer:          winterland1989@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
homepage:           https://github.com/winterland1989/data-has

source-repository head
  type:     git
  location: git://github.com/winterland1989/data-has.git

library
  exposed-modules:      Data.Has
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base < 5

  -- hs-source-dirs:      
  default-language:    Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmark
  default-language:    Haskell2010
  build-depends:        base
                    ,   data-has
                    ,   criterion >= 1.0.2.0
                    ,   transformers

